--- a/assets/style.css
+++ b/assets/style.css
@@ -71,12 +71,16 @@ main {
 }
 
 h2 {
-  display: block;
-  margin: 50px;
-  padding: 15px;
-  border: 5px;
-  border-color: black;
-  }
+    border: 1px solid transparent;
+    padding: 2px;
+    border-image: url(border.png) 30 round;
+}
+
+.middle {
+  
+  
+
+}
 
 
 footer {
