--- a/assets/style.css
+++ b/assets/style.css
@@ -1,19 +1,34 @@
 * {
    margin:0;
-   padding:0;  
+   padding:0; 
+    
  }
 
  body {
   background-image: url("mtrainer.jpeg");
       background-size: cover;
       background-position: center;
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
  }
 
  
 .mtrainer {
-      width: 100vw;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border: 1px solid yellow; 
+ }
+
+ .photocontainer {
+  display:flex;
+  gap: 5rem;
+  flex-wrap: wrap;
+ }
+
+ .profilepic {
+  width: 15rem;
  }
 
  .selfie {
@@ -21,31 +36,42 @@
    height: 300px;
    -ms-flex-item-align: end;
    border-radius: 150px;
-   padding: 45px;
+   padding: 3rem;
 }
 
-h1 {
+.myname {
   display: block;
   font-family: fantasy;
   font-size: 80px;
   padding: 30px;
+  max-width: 50rem;
+  min-width: 20rem;
 }
 
-.portfolio {
+#portfolio {
+  display: flex;
+  align-items: flex-end;
+}
+
+#portfolio span {
    font-family: fantasy;
    font-size: 50px;
    font-style: initial;
    color: rgb(201, 185, 164);
-   position: relative;
-   margin-left: 300px;
+   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+   margin-left: 19rem;
+   max-width: 20rem;
+   min-width: 10rem;
 }
 
-/* .title-area {
-  width: 100%;
+.title-area {
+  /* width: 100%; */
   display: flex;
   justify-content: space-between;
   align-items: center;
-} */
+  gap: 1rem;
+  flex-wrap: wrap;
+}
 
 nav ul li a {
   list-style-type: none;
@@ -53,15 +79,21 @@ nav ul li a {
   color: black;
 }
 
+.nav {
+  max-width: 50rem;
+  min-width: 20rem;
+}
+
 ul {
    display: flex;
    font-family: fantasy;
    font-size: 20px;
    flex-direction: row;
-   justify-content: flex-end;
+   justify-content: center;
    gap: 35px;
    list-style-type: none;
-   padding-right: 190px;
+   padding-right: 5rem;
+   width: 100%;
 }
 
 main {
@@ -76,12 +108,14 @@ h2 {
     border-image: url(border.png) 30 round;
 }
 
-.middle {
+p {
+  border-image: round;
+  background-color:antiquewhite;
+  border-style: dotted;
+  border-color: green;
+  padding: 10px;
   
-  
-
 }
-
 
 footer {
   display: flex;
